<resources>
    <string name="app_legal1"><![CDATA[
        <b>Source Code:</b><br />
        Copyright &#169 2021-2025 Forrest Guice <br />
        Source code available under GPLv3.
    ]]></string>

    <string name="app_version"><![CDATA[<b>Version:</b>]]> %s</string>
    <string name="app_provider_version"><![CDATA[<b>Suntimes:</b>]]> %s</string>
    <string name="app_support_url"><![CDATA[
        <b>Support:</b> visit the
        <a href="https://github.com/forrestguice/IntervalMidpoints/issues">issue tracker</a> to submit a request.
    ]]></string>    <!-- formatted link -->
    <string name="app_source_url"><![CDATA[
        <a href="https://github.com/forrestguice/IntervalMidpoints/">github.com/forrestguice/IntervalMidpoints/</a>
    ]]></string>    <!-- formatted link -->
    <string name="app_changelog_url">https://github.com/forrestguice/IntervalMidpoints/blob/master/CHANGELOG.md</string>   <!-- url only (no formatting) -->
    <string name="app_commit_url">https://github.com/forrestguice/IntervalMidpoints/commit/</string>   <!-- url only (no formatting) -->

    <string name="action_alarm">Set Alarm</string>
    <string name="action_select">Select</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_onlineHelp">Online Help</string>
    <string name="action_about">About</string>

    <string name="format_date0">MMMM d</string>                   <!-- February 27 -->
    <string name="format_date0_long">MMMM d, yyyy</string>        <!-- February 27, 2020 -->
    <string name="format_date">MMMM d\nEEEE</string>              <!-- Thursday, February 27 -->
    <string name="format_date_long">MMMM d, yyyy\nEEEE</string>   <!-- Thursday, February 27, 2020 -->
    <string name="format_location">%1$s, %2$s</string>                <!-- lat, lon -->
    <string name="format_location_long">%1$s, %2$s %3$s</string>        <!-- lat, lon [alt] -->
    <string name="format_location_altitude">%1$s%2$s</string>     <!-- altitude, e.g. 1600m -->
    <string name="format_tag">[%1$s]</string>                     <!-- [tag] -->
    <string name="format_summary_minutes">%s minutes</string>
    <string name="format_help"><![CDATA[%1$s<br/><br/>%2$s]]></string>

    <string name="units_feet">feet</string>
    <string name="units_feet_short">ft</string>
    <string name="units_meters">meters</string>
    <string name="units_meters_short">m</string>

    <string-array name="event_display">
        <item>Solar Midnight</item>
        <item>Astronomical Twilight (-18° rising)</item>
        <item>Nautical Twilight (-12° rising)</item>
        <item>Blue Hour (-8° rising)</item>
        <item>Civil Twilight (-6° rising)</item>
        <item>Blue Hour (-4° rising)</item>

        <item>Sunrise</item>
        <item>Golden Hour (°6 rising)</item>
        <item>Solar Noon</item>
        <item>Golden Hour (°6 setting)</item>
        <item>Sunset</item>

        <item>Blue Hour (-4° setting)</item>
        <item>Civil Twilight (-6° setting)</item>
        <item>Blue Hour (-8° setting)</item>
        <item>Nautical Twilight (-12° setting)</item>
        <item>Astronomical Twilight (-18° setting)</item>
    </string-array>  <!-- TODO -->
    <string-array name="event_values" translatable="false">  <!-- must be indexed in order of occurrence -->
        <item>midnight</item>
        <item>astrorise</item>
        <item>nauticalrise</item>
        <item>blue8rise</item>
        <item>civilrise</item>
        <item>blue4rise</item>

        <item>sunrise</item>
        <item>goldenmorning</item>
        <item>solarnoon</item>
        <item>goldenevening</item>
        <item>sunset</item>

        <item>blue4set</item>
        <item>civilset</item>
        <item>blue8set</item>
        <item>nauticalset</item>
        <item>astroset</item>
    </string-array>  <!-- TODO -->


    <string-array name="alarm_names" translatable="false">
        <item>sunrise_sunset_2_0</item>
    </string-array>  <!-- TODO -->
    <string name="alarm_title_format_short">%1$s ¦ %2$s</string>  <!-- TODO -->
    <string name="alarm_title_format_long">%1$s ¦ %2$s [%3$s]</string>  <!-- TODO -->
    <string name="alarm_title_tag_format">%1$s/%2$s</string>  <!-- TODO -->
    <string name="alarm_summary_format">@string/app_name</string>  <!-- TODO -->

    <string name="divideby_msg">Divided into</string> <!-- TODO -->
    <string-array name="divideby_display">
        <item>2 periods</item>
        <item>3 periods</item>
        <item>4 periods</item>
    </string-array>  <!-- TODO -->
    <integer-array name="divideby_values" translatable="false">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </integer-array>  <!-- TODO -->
    <string name="period_msg">of %s</string> <!-- TODO -->

    <string name="event_at">at %s</string> <!-- TODO -->
    <string name="event_from">from %s</string> <!-- TODO -->
    <string name="event_to">to %s</string> <!-- TODO -->
    <string name="event_dne">does not occur</string> <!-- TODO -->
    <string name="midpoints_msg">The midpoints are at</string> <!-- display above midpoint results --> <!-- TODO -->
    <plurals name="midpoints_plural">
        <item quantity="one">The midpoint is at</item>
        <item quantity="other">The midpoints are at</item>
    </plurals>

    <string name="interval_msg0">An interval of %s</string>    <!-- displayed above event selection ui --> <!-- TODO -->
    <string name="interval_msg1">between..</string>    <!-- displayed above event selection ui --> <!-- TODO -->

    <string name="notification_message">Waiting for pending interaction with Suntimes.</string>
    <string name="notification_message1">Finishing up …</string>
    <string name="notificationChannel_main_title">Main</string>
    <string name="notificationChannel_main_desc">Main notification channel</string>

    <string name="pref_category_general">General</string>
    <string name="pref_category_alarms">Alarms</string>
    <string name="pref_category_advanced">Advanced</string>

    <string name="pref_summary_alarms_optWhiteList">Battery Optimization</string>
    <string name="pref_summary_alarms_optWhiteList_listed">Not optimized (recommended)</string>
    <string name="pref_summary_alarms_optWhiteList_unlisted">Optimizing battery use.\nAlarms may be delayed up to 15 minutes.</string>
    <string name="pref_summary_alarms_optWhiteList_unlisted_aggressive">Optimizing battery use.\nAlarms may fail to work reliably.</string>

    <string name="pref_title_alarms_autostart">Autostart</string>
    <string name="pref_summary_alarms_autostart_on">On</string>
    <string name="pref_summary_alarms_autostart_off">Off.\nAlarms may fail to work after reboot.</string>
    <string name="pref_summary_alarms_autostart_summary">%1$s</string>

    <string name="pref_title_alarms_notifications">Notifications</string>
    <string name="pref_summary_alarms_notifications_on">On</string>
    <string name="pref_summary_alarms_notifications_off">Off.\nPermission is required to display boot sequence notifications.</string>

    <string name="pref_title_autolaunch">Show notification during boot sequence</string>
    <string name="pref_summary_autolaunch">Some devices may need this option to reschedule alarms after a reboot (but most do not require it).</string>

    <string-array name="help_topics">      <!-- in order of appearance -->
        <item>@string/help_configuration</item>
        <item>@string/help_alarms</item>
    </string-array>
    <string name="help_configuration"><![CDATA[<h4>App Configuration</h4>The location and other options are configured from Suntimes.]]></string>
    <string name="help_alarms"><![CDATA[
        <h4>Alarms</h4>
        Choose the <b>start event</b>, <b>end event</b>, and number of <b>periods</b>, then select a midpoint and click <b><large>✓</large> accept</b> to add an alarm.
    ]]></string>
    <string name="battery_optimization_warning">Battery optimization is enabled!</string>
    <string-array name="aggressive_battery_known_offenders" translatable="false">    <!-- device manufacturer id; a warning will be displayed for these devices -->
        <item>Samsung</item>
        <item>OnePlus</item>
        <item>Huawei</item>
        <item>Xiaomi</item>
        <item>Meizu</item>
        <item>Asus</item>
        <item>WIKO</item>
        <item>LENOVO</item>
        <item>OPPO</item>
        <item>Vivo</item>
        <item>realme</item>
        <item>Blackview</item>
        <item>Sony</item>
        <item>Unihertz</item>
        <!--<item>Google</item>--> <!-- uncomment to test with emulator -->
    </string-array>

</resources>
