<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/pref_category_alarms"
        android:key="app_alarms_category">

        <Preference
            android:key="app_alarms_autostart" android:persistent="false"
            android:title="@string/pref_title_alarms_autostart"
            android:summary="@string/pref_summary_alarms_autostart_on" />

        <Preference
            android:key="app_alarms_batterytopt" android:persistent="false"
            android:title="@string/pref_summary_alarms_optWhiteList"
            android:summary="@string/pref_summary_alarms_optWhiteList_unlisted" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_advanced">

        <CheckBoxPreference android:key="autolaunch"
            android:title="@string/pref_title_autolaunch" android:defaultValue="@bool/def_autolaunch"
            android:summary="@string/pref_summary_autolaunch" />

        <Preference
            android:key="app_alarms_notifications" android:persistent="false"
            android:title="@string/pref_title_alarms_notifications"
            android:summary="@string/pref_summary_alarms_notifications_off" />

    </PreferenceCategory>

</PreferenceScreen>
