<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.forrestguice.suntimes.intervalmidpoints.MainActivity">

    <item
        android:id="@+id/action_notification_test"
        android:orderInCategory="600"
        android:icon="?attr/icAbout"
        android:title="Notification Test"
        android:visible="false" android:enabled="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="700"
        android:icon="?attr/icSettings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="800"
        android:icon="?attr/icHelp"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="900"
        android:icon="?attr/icAbout"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
